fix z-indexes about nav/footer & error page, + fix footer size reponsive

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -331,7 +331,7 @@ button {
 /* iframes */
 .iframe-container {
   position: relative;
-  z-index: 50;
+  z-index: 2;
 }
 
 iframe {
@@ -347,7 +347,7 @@ iframe {
   width: 100%;
   height: 100%;
   background-color: rgba(255, 255, 255, 0);
-  z-index: 10;
+  z-index: 1;
 }
 
 #pokemon-dance {
@@ -1059,6 +1059,7 @@ main {
     transition: var(--transitionTime);
     transform: translateX(60%);
     border-radius: 50%;
+    z-index: 50;
   }
 }
 
@@ -1079,7 +1080,6 @@ footer {
   flex-direction: column;
   align-items: center;
   justify-content: space-evenly;
-  z-index: 8;
   background-color: var(--secondary-color);
   opacity: 0.9;
   gap: 20px;
@@ -1335,6 +1335,11 @@ footer {
   #shiny-mode {
     transform: translateX(-100%);
     align-self: flex-start;
+  }
+
+  footer{
+    width: calc(100vw - 300px - 10px);
+    align-self: flex-end;
   }
 }
 
